// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Examples should generate schema for axis: axis 1`] = `
"schema @transport(kind: "soap", subgraph: "axis") {
  query: Query
  mutation: Mutation
}

directive @soap(elementName: String, bindingNamespace: String, endpoint: String, subgraph: String, bodyAlias: String, soapHeaders: SOAPHeaders, soapAction: String, soapNamespace: String) on FIELD_DEFINITION

type Query {
  placeholder: Void
}

"""Represents NULL values"""
scalar Void

type Mutation {
  impl_TestService_TestService_createTest(createTestRequest: impl_createTestRequestType_Input): impl_createTestResponseType @soap(elementName: "createTestResponse", bindingNamespace: "urn:com.guild:operations/test", endpoint: "http://the-guild.dev/graphql/mesh/soap/TestService", subgraph: "axis", soapNamespace: "http://schemas.xmlsoap.org/soap/envelope/")
}

type impl_createTestResponseType {
  name: String
  intCount: Int
  integerCount: Int
  doubleCount: Float
  floatCount: Float
  longCount: BigInt
  shortCount: Int
  unsignedIntCount: UnsignedInt
  unsignedLongCount: BigInt
  unsignedShortCount: UnsignedInt
  unsignedByteField: Byte
  booleanField: Boolean
  byteField: Byte
  dateField: Date
  dateTimeField: DateTime
  decimalField: Float
  nonNegIntField: NonNegativeInt
  nonPosIntField: NonPositiveInt
  posIntField: PositiveInt
  negIntField: NegativeInt
  weekday: impl_weekday
  status: impl_testStatusInfoType
  weekdays: impl_weekDays
}

"""
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
"""
scalar BigInt

"""Integers that will have a value of 0 or more."""
scalar UnsignedInt

"""The \`Byte\` scalar type represents byte value as a Buffer"""
scalar Byte

"""
A date string, such as 2007-12-03, compliant with the \`full-date\` format outlined in section 5.6 of the RFC 3339 profile of the ISO 8601 standard for representation of dates and times using the Gregorian calendar.
"""
scalar Date

"""
A date-time string at UTC, such as 2007-12-03T10:15:30Z, compliant with the \`date-time\` format outlined in section 5.6 of the RFC 3339 profile of the ISO 8601 standard for representation of dates and times using the Gregorian calendar.
"""
scalar DateTime

"""Integers that will have a value of 0 or more."""
scalar NonNegativeInt

"""Integers that will have a value of 0 or less."""
scalar NonPositiveInt

"""Integers that will have a value greater than 0."""
scalar PositiveInt

"""Integers that will have a value less than 0."""
scalar NegativeInt

enum impl_weekday {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
}

type impl_testStatusInfoType {
  status: String
}

type impl_weekDays {
  option: [impl_weekday]
}

input impl_createTestRequestType_Input {
  name: String
  intCount: Int
  integerCount: Int
  doubleCount: Float
  floatCount: Float
  longCount: BigInt
  shortCount: Int
  unsignedIntCount: UnsignedInt
  unsignedLongCount: BigInt
  unsignedShortCount: UnsignedInt
  unsignedByteField: Byte
  booleanField: Boolean
  byteField: Byte
  dateField: Date
  dateTimeField: DateTime
  decimalField: Float
  nonNegIntField: NonNegativeInt
  nonPosIntField: NonPositiveInt
  posIntField: PositiveInt
  negIntField: NegativeInt
  weekday: impl_weekday
  weekdays: impl_weekDays_Input
}

input impl_weekDays_Input {
  option: [impl_weekday]
}

input SOAPHeaders {
  namespace: String
  alias: String
  headers: ObjMap
}

scalar ObjMap"
`;

exports[`Examples should generate schema for example1: example1 1`] = `
"schema @transport(kind: "soap", subgraph: "example1") {
  query: Query
  mutation: Mutation
}

directive @soap(elementName: String, bindingNamespace: String, endpoint: String, subgraph: String, bodyAlias: String, soapHeaders: SOAPHeaders, soapAction: String, soapNamespace: String) on FIELD_DEFINITION

type Query {
  TodoService_TodoService_BasicHttpBinding_ITodoService_GetTodos(GetTodos: JSON = ""): TodoService_GetTodosResponse @soap(elementName: "GetTodosResponse", bindingNamespace: "http://tempuri.org/", endpoint: "http://localhost:8088/TodoService/basichttp", subgraph: "example1", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://tempuri.org/ITodoService/GetTodos")
}

type TodoService_GetTodosResponse {
  GetTodosResult: tns_ArrayOfTodoMessage
}

type tns_ArrayOfTodoMessage {
  TodoMessage: [tns_TodoMessage]
}

type tns_TodoMessage {
  Author: tns_Name
  Description: String
}

type tns_Name {
  First: String
  Last: String
  Middle: String
}

"""
The \`JSON\` scalar type represents JSON values as specified by [ECMA-404](http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf).
"""
scalar JSON

type Mutation {
  TodoService_TodoService_BasicHttpBinding_ITodoService_UpdateFileClass(UpdateFileClass: TodoService_UpdateFileClass_Input): JSON @soap(elementName: "UpdateFileClassResponse", bindingNamespace: "http://tempuri.org/", endpoint: "http://localhost:8088/TodoService/basichttp", subgraph: "example1", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://tempuri.org/ITodoService/UpdateFileClass")
  TodoService_TodoService_BasicHttpBinding_ITodoService_AddUpdateClass(AddUpdateClass: TodoService_AddUpdateClass_Input): TodoService_AddUpdateClassResponse @soap(elementName: "AddUpdateClassResponse", bindingNamespace: "http://tempuri.org/", endpoint: "http://localhost:8088/TodoService/basichttp", subgraph: "example1", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://tempuri.org/ITodoService/AddUpdateClass")
  TodoService_TodoService_BasicHttpBinding_ITodoService_AddTodo(AddTodo: TodoService_AddTodo_Input): TodoService_AddTodoResponse @soap(elementName: "AddTodoResponse", bindingNamespace: "http://tempuri.org/", endpoint: "http://localhost:8088/TodoService/basichttp", subgraph: "example1", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://tempuri.org/ITodoService/AddTodo")
  TodoService_TodoService_BasicHttpBinding_ITodoService_FaultAddTodo(FaultAddTodo: TodoService_FaultAddTodo_Input): TodoService_FaultAddTodoResponse @soap(elementName: "FaultAddTodoResponse", bindingNamespace: "http://tempuri.org/", endpoint: "http://localhost:8088/TodoService/basichttp", subgraph: "example1", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://tempuri.org/ITodoService/FaultAddTodo")
  TodoService_TodoService_BasicHttpBinding_ITodoService_FailGetTodo(FailGetTodo: JSON = ""): TodoService_FailGetTodoResponse @soap(elementName: "FailGetTodoResponse", bindingNamespace: "http://tempuri.org/", endpoint: "http://localhost:8088/TodoService/basichttp", subgraph: "example1", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://tempuri.org/ITodoService/FailGetTodo")
}

input TodoService_UpdateFileClass_Input {
  cls: tns_FileClass_Input
}

input tns_FileClass_Input {
  Mode: tns_EntityMode
  ClassIntID: BigInt
  CreatedBy: String
  CreatedDtTm: DateTime
  FirmIntID: String
  LastUpdatedBy: String
  LastUpdatedDtTm: DateTime
  Name: String
  PeriodType: tns_PeriodType
  Retention: Int
  Timestamp: Byte
}

enum tns_EntityMode {
  New
  Deleted
  Changed
  Unchanged
}

"""
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
"""
scalar BigInt

"""
A date-time string at UTC, such as 2007-12-03T10:15:30Z, compliant with the \`date-time\` format outlined in section 5.6 of the RFC 3339 profile of the ISO 8601 standard for representation of dates and times using the Gregorian calendar.
"""
scalar DateTime

enum tns_PeriodType {
  Days
  Weeks
  Months
  Years
}

"""The \`Byte\` scalar type represents byte value as a Buffer"""
scalar Byte

type TodoService_AddUpdateClassResponse {
  AddUpdateClassResult: Boolean
}

input TodoService_AddUpdateClass_Input {
  updateClass: tns_UpdateClass_Input
}

input tns_UpdateClass_Input {
  ClassIndId: String
}

type TodoService_AddTodoResponse {
  AddTodoResult: Boolean
}

input TodoService_AddTodo_Input {
  todo: tns_TodoMessage_Input
}

input tns_TodoMessage_Input {
  Author: tns_Name_Input
  Description: String
}

input tns_Name_Input {
  First: String
  Last: String
  Middle: String
}

type TodoService_FaultAddTodoResponse {
  FaultAddTodoResult: String
}

input TodoService_FaultAddTodo_Input {
  text: String
}

type TodoService_FailGetTodoResponse {
  FailGetTodoResult: String
}

input SOAPHeaders {
  namespace: String
  alias: String
  headers: ObjMap
}

scalar ObjMap"
`;

exports[`Examples should generate schema for example2: example2 1`] = `
"schema @transport(kind: "soap", subgraph: "example2") {
  query: Query
  mutation: Mutation
}

directive @soap(elementName: String, bindingNamespace: String, endpoint: String, subgraph: String, bodyAlias: String, soapHeaders: SOAPHeaders, soapAction: String, soapNamespace: String) on FIELD_DEFINITION

type Query {
  AdminServiceType_AdminServiceType_BasicHttpBinding_IAdminService_GetServiceHealth(GetServiceHealth: JSON = ""): tns_GetServiceHealthResponse @soap(elementName: "GetServiceHealthResponse", bindingNamespace: "http://Pfx.Net/Document/IAdminService", endpoint: "http://[::]/AdminServiceType", subgraph: "example2", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://tempuri.org/IPfxServiceHealth/GetServiceHealth")
  AdminServiceType_AdminServiceType_BasicHttpBinding_IAdminService_GetFileClassByClassID(GetFileClassByClassID: AdminServiceType_GetFileClassByClassID_Input): AdminServiceType_GetFileClassByClassIDResponse @soap(elementName: "GetFileClassByClassIDResponse", bindingNamespace: "http://Pfx.Net/Document/IAdminService", endpoint: "http://[::]/AdminServiceType", subgraph: "example2", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://Pfx.Net/Document/IAdminService/IAdminService/GetFileClassByClassID")
  AdminServiceType_AdminServiceType_BasicHttpBinding_IAdminService_GetFileClassByClassIntIDCaasToMonolith(GetFileClassByClassIntIDCaasToMonolith: AdminServiceType_GetFileClassByClassIntIDCaasToMonolith_Input): AdminServiceType_GetFileClassByClassIntIDCaasToMonolithResponse @soap(elementName: "GetFileClassByClassIntIDCaasToMonolithResponse", bindingNamespace: "http://Pfx.Net/Document/IAdminService", endpoint: "http://[::]/AdminServiceType", subgraph: "example2", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://Pfx.Net/Document/IAdminService/IAdminService/GetFileClassByClassIntIDCaasToMonolith")
}

type tns_GetServiceHealthResponse {
  GetServiceHealthResult: tns_ServiceHealth
}

type tns_ServiceHealth {
  IsHealthy: Boolean
  UniqueValue: BigInt
}

"""
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
"""
scalar BigInt

"""
The \`JSON\` scalar type represents JSON values as specified by [ECMA-404](http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf).
"""
scalar JSON

type AdminServiceType_GetFileClassByClassIDResponse {
  GetFileClassByClassIDResult: tns_FileClass
}

type tns_FileClass {
  Mode: tns_EntityMode
  ClassIntID: BigInt
  CreatedBy: String
  CreatedDtTm: DateTime
  Entityclasses: tns_EntityClassList
  FirmGuid: tns_guid
  FirmIntID: BigInt
  LastUpdatedBy: String
  LastUpdatedDtTm: DateTime
  Name: String
  NeedANotification: Boolean
  PeriodType: tns_PeriodType
  PreventPublishFlg: Boolean
  Retention: Int
  RetentionChanged: String
  Subclasses: tns_FileSubclassList
  Timestamp: Byte
}

enum tns_EntityMode {
  New
  Deleted
  Changed
  Unchanged
}

"""
A date-time string at UTC, such as 2007-12-03T10:15:30Z, compliant with the \`date-time\` format outlined in section 5.6 of the RFC 3339 profile of the ISO 8601 standard for representation of dates and times using the Gregorian calendar.
"""
scalar DateTime

type tns_EntityClassList {
  EntityClass: [tns_EntityClass]
}

type tns_EntityClass {
  Mode: tns_EntityMode
  ClassIntID: BigInt
  EntityClassIntID: BigInt
  EntityIntID: BigInt
  EntityType: tns_EntityType
  FirmIntID: BigInt
}

enum tns_EntityType {
  Firm
  Office
  Staff
  StaffList
  BusinessUnit
  Client
  ClientList
  DocumentEntityType
  OtherClient
  ClientOtherEntity
  OfficeBusinessUnit
  NonClient
  NonClientList
}

"""
A field whose value matches /[\\da-fA-F]{8}-[\\da-fA-F]{4}-[\\da-fA-F]{4}-[\\da-fA-F]{4}-[\\da-fA-F]{12}/.
"""
scalar tns_guid

enum tns_PeriodType {
  Days
  Weeks
  Months
  Years
}

type tns_FileSubclassList {
  FileSubclass: [tns_FileSubclass]
}

type tns_FileSubclass {
  Mode: tns_EntityMode
  ClassIntID: BigInt
  CreatedBy: String
  CreatedDtTm: DateTime
  EffectivePeriodType: tns_PeriodType
  EffectiveRetention: Int
  LastUpdatedBy: String
  LastUpdatedDtTm: DateTime
  Name: String
  PeriodType: tns_PeriodType
  Permanent: Boolean
  Retention: Int
  RetentionChanged: String
  SubClassIntID: BigInt
  Timestamp: Byte
}

"""The \`Byte\` scalar type represents byte value as a Buffer"""
scalar Byte

input AdminServiceType_GetFileClassByClassID_Input {
  classIntID: BigInt
}

type AdminServiceType_GetFileClassByClassIntIDCaasToMonolithResponse {
  GetFileClassByClassIntIDCaasToMonolithResult: tns_FileClass
}

input AdminServiceType_GetFileClassByClassIntIDCaasToMonolith_Input {
  classIntID: BigInt
}

type Mutation {
  AdminServiceType_AdminServiceType_BasicHttpBinding_IAdminService_CreateFileClass(CreateFileClass: AdminServiceType_CreateFileClass_Input): AdminServiceType_CreateFileClassResponse @soap(elementName: "CreateFileClassResponse", bindingNamespace: "http://Pfx.Net/Document/IAdminService", endpoint: "http://[::]/AdminServiceType", subgraph: "example2", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://Pfx.Net/Document/IAdminService/IAdminService/CreateFileClass")
  AdminServiceType_AdminServiceType_BasicHttpBinding_IAdminService_UpdateFileClass(UpdateFileClass: AdminServiceType_UpdateFileClass_Input): JSON @soap(elementName: "UpdateFileClassResponse", bindingNamespace: "http://Pfx.Net/Document/IAdminService", endpoint: "http://[::]/AdminServiceType", subgraph: "example2", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://Pfx.Net/Document/IAdminService/IAdminService/UpdateFileClass")
  AdminServiceType_AdminServiceType_BasicHttpBinding_IAdminService_DeleteFileClass(DeleteFileClass: AdminServiceType_DeleteFileClass_Input): JSON @soap(elementName: "DeleteFileClassResponse", bindingNamespace: "http://Pfx.Net/Document/IAdminService", endpoint: "http://[::]/AdminServiceType", subgraph: "example2", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://Pfx.Net/Document/IAdminService/IAdminService/DeleteFileClass")
  AdminServiceType_AdminServiceType_BasicHttpBinding_IAdminService_DeleteEntityClass(DeleteEntityClass: AdminServiceType_DeleteEntityClass_Input): JSON @soap(elementName: "DeleteEntityClassResponse", bindingNamespace: "http://Pfx.Net/Document/IAdminService", endpoint: "http://[::]/AdminServiceType", subgraph: "example2", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "http://Pfx.Net/Document/IAdminService/IAdminService/DeleteEntityClass")
}

type AdminServiceType_CreateFileClassResponse {
  CreateFileClassResult: BigInt
}

input AdminServiceType_CreateFileClass_Input {
  classData: tns_FileClass_Input
}

input tns_FileClass_Input {
  Mode: tns_EntityMode
  ClassIntID: BigInt
  CreatedBy: String
  CreatedDtTm: DateTime
  Entityclasses: tns_EntityClassList_Input
  FirmGuid: tns_guid
  FirmIntID: BigInt
  LastUpdatedBy: String
  LastUpdatedDtTm: DateTime
  Name: String
  NeedANotification: Boolean
  PeriodType: tns_PeriodType
  PreventPublishFlg: Boolean
  Retention: Int
  RetentionChanged: String
  Subclasses: tns_FileSubclassList_Input
  Timestamp: Byte
}

input tns_EntityClassList_Input {
  EntityClass: [tns_EntityClass_Input]
}

input tns_EntityClass_Input {
  Mode: tns_EntityMode
  ClassIntID: BigInt
  EntityClassIntID: BigInt
  EntityIntID: BigInt
  EntityType: tns_EntityType
  FirmIntID: BigInt
}

input tns_FileSubclassList_Input {
  FileSubclass: [tns_FileSubclass_Input]
}

input tns_FileSubclass_Input {
  Mode: tns_EntityMode
  ClassIntID: BigInt
  CreatedBy: String
  CreatedDtTm: DateTime
  EffectivePeriodType: tns_PeriodType
  EffectiveRetention: Int
  LastUpdatedBy: String
  LastUpdatedDtTm: DateTime
  Name: String
  PeriodType: tns_PeriodType
  Permanent: Boolean
  Retention: Int
  RetentionChanged: String
  SubClassIntID: BigInt
  Timestamp: Byte
}

input AdminServiceType_UpdateFileClass_Input {
  classData: tns_FileClass_Input
}

input AdminServiceType_DeleteFileClass_Input {
  classIntID: BigInt
  timestamp: Byte
}

input AdminServiceType_DeleteEntityClass_Input {
  entityclassIntID: BigInt
}

input SOAPHeaders {
  namespace: String
  alias: String
  headers: ObjMap
}

scalar ObjMap"
`;

exports[`Examples should generate schema for greeting: greeting 1`] = `
"schema @transport(kind: "soap", subgraph: "greeting") {
  query: Query
  mutation: Mutation
}

directive @soap(elementName: String, bindingNamespace: String, endpoint: String, subgraph: String, bodyAlias: String, soapHeaders: SOAPHeaders, soapAction: String, soapNamespace: String) on FIELD_DEFINITION

type Query {
  placeholder: Void
}

"""Represents NULL values"""
scalar Void

type Mutation {
  NumberConversion_NumberConversion_NumberConversionSoap_NumberToWords(NumberToWords: NumberConversion_NumberToWords_Input): NumberConversion_NumberToWordsResponse @soap(elementName: "NumberToWordsResponse", bindingNamespace: "http://www.dataaccess.com/webservicesserver/", endpoint: "https://www.dataaccess.com/webservicesserver/NumberConversion.wso", subgraph: "greeting", soapNamespace: "http://schemas.xmlsoap.org/soap/envelope/")
  NumberConversion_NumberConversion_NumberConversionSoap_NumberToDollars(NumberToDollars: NumberConversion_NumberToDollars_Input): NumberConversion_NumberToDollarsResponse @soap(elementName: "NumberToDollarsResponse", bindingNamespace: "http://www.dataaccess.com/webservicesserver/", endpoint: "https://www.dataaccess.com/webservicesserver/NumberConversion.wso", subgraph: "greeting", soapNamespace: "http://schemas.xmlsoap.org/soap/envelope/")
}

type NumberConversion_NumberToWordsResponse {
  NumberToWordsResult: String
}

input NumberConversion_NumberToWords_Input {
  ubiNum: BigInt
}

"""
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
"""
scalar BigInt

type NumberConversion_NumberToDollarsResponse {
  NumberToDollarsResult: String
}

input NumberConversion_NumberToDollars_Input {
  dNum: Float
}

input SOAPHeaders {
  namespace: String
  alias: String
  headers: ObjMap
}

scalar ObjMap"
`;

exports[`Examples should generate schema for tempconvert: tempconvert 1`] = `
"schema @transport(kind: "soap", subgraph: "tempconvert") {
  query: Query
  mutation: Mutation
}

directive @soap(elementName: String, bindingNamespace: String, endpoint: String, subgraph: String, bodyAlias: String, soapHeaders: SOAPHeaders, soapAction: String, soapNamespace: String) on FIELD_DEFINITION

type Query {
  placeholder: Void
}

"""Represents NULL values"""
scalar Void

type Mutation {
  tns_TempConvert_TempConvertSoap_FahrenheitToCelsius(FahrenheitToCelsius: tns_FahrenheitToCelsius_Input): tns_FahrenheitToCelsiusResponse @soap(elementName: "FahrenheitToCelsiusResponse", bindingNamespace: "https://www.w3schools.com/xml/", endpoint: "http://www.w3schools.com/xml/tempconvert.asmx", subgraph: "tempconvert", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "https://www.w3schools.com/xml/FahrenheitToCelsius")
  tns_TempConvert_TempConvertSoap_CelsiusToFahrenheit(CelsiusToFahrenheit: tns_CelsiusToFahrenheit_Input): tns_CelsiusToFahrenheitResponse @soap(elementName: "CelsiusToFahrenheitResponse", bindingNamespace: "https://www.w3schools.com/xml/", endpoint: "http://www.w3schools.com/xml/tempconvert.asmx", subgraph: "tempconvert", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "https://www.w3schools.com/xml/CelsiusToFahrenheit")
  tns_TempConvert_TempConvertSoap12_FahrenheitToCelsius(FahrenheitToCelsius: tns_FahrenheitToCelsius_Input): tns_FahrenheitToCelsiusResponse @soap(elementName: "FahrenheitToCelsiusResponse", bindingNamespace: "https://www.w3schools.com/xml/", endpoint: "http://www.w3schools.com/xml/tempconvert.asmx", subgraph: "tempconvert", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "https://www.w3schools.com/xml/FahrenheitToCelsius")
  tns_TempConvert_TempConvertSoap12_CelsiusToFahrenheit(CelsiusToFahrenheit: tns_CelsiusToFahrenheit_Input): tns_CelsiusToFahrenheitResponse @soap(elementName: "CelsiusToFahrenheitResponse", bindingNamespace: "https://www.w3schools.com/xml/", endpoint: "http://www.w3schools.com/xml/tempconvert.asmx", subgraph: "tempconvert", soapNamespace: "http://www.w3.org/2003/05/soap-envelope", soapAction: "https://www.w3schools.com/xml/CelsiusToFahrenheit")
  tns_TempConvert_TempConvertHttpPost_FahrenheitToCelsius(Fahrenheit: String = ""): String @soap(elementName: "string", bindingNamespace: "https://www.w3schools.com/xml/", endpoint: "http://www.w3schools.com/xml/tempconvert.asmx", subgraph: "tempconvert", soapNamespace: "http://www.w3.org/2003/05/soap-envelope")
  tns_TempConvert_TempConvertHttpPost_CelsiusToFahrenheit(Celsius: String = ""): String @soap(elementName: "string", bindingNamespace: "https://www.w3schools.com/xml/", endpoint: "http://www.w3schools.com/xml/tempconvert.asmx", subgraph: "tempconvert", soapNamespace: "http://www.w3.org/2003/05/soap-envelope")
}

type tns_FahrenheitToCelsiusResponse {
  FahrenheitToCelsiusResult: String
}

input tns_FahrenheitToCelsius_Input {
  Fahrenheit: String
}

type tns_CelsiusToFahrenheitResponse {
  CelsiusToFahrenheitResult: String
}

input tns_CelsiusToFahrenheit_Input {
  Celsius: String
}

input SOAPHeaders {
  namespace: String
  alias: String
  headers: ObjMap
}

scalar ObjMap"
`;
